# Personal-AI-Assistant---RAG

./: README.md  app.py  main.py  pyproject.toml  sample.md
app/: Dockerfile  main.py  requirements.txt
