[project]
name = "qa-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchainhub>=0.1.21",
    "llama-index>=0.14.21",
    "openpyxl>=3.1.5",
    "pypdf>=6.11.0",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
]
